make changes in style.css file for header container

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
     text-align: center;
 }
 
-.container{
+header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
