--- a/style.css
+++ b/style.css
@@ -114,7 +114,9 @@ header #close-menu {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
-    padding: 0 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+
    
 }
 #hero .container .content,
