--- a/style.css
+++ b/style.css
@@ -168,3 +168,37 @@ button{
         font-size: 14px;
     }
 }
+/* about section */
+#about{
+    padding: 0px 20px;
+    min-height: 80vh;
+}
+#about .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+#about p{
+    margin-bottom: 0px;
+}
+#about .container .content,
+#about .container .image{
+   padding-top: 20px;
+}
+#about .container .content{
+    display: flex;
+    flex-direction: column;
+}
+#about img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+@media (max-width: 768px) {
+    #about .container{
+        grid-template-columns: 1fr;
+    }
+}
